--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Astarte">
         <activity android:name=".start.StartActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,7 +17,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".appsettings.AppSettingsActivity" />
-        <activity android:name=".appsettings.AppSettingsActivityTest" />
     </application>
 
 </manifest>
