Add factory for creating Boor instance. Add BooruActivity for displaying service content. Make GelbooruRequestAPI serializable.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".appsettings.view.AppSettingsActivity" />
+        <activity android:name=".booru.view.BooruActivity" />
     </application>
 
 </manifest>
