--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+
     // (/0_0)/  Kotlin  \(0_0\)
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     // Coroutines
@@ -44,6 +45,10 @@ dependencies {
     implementation "org.jetbrains.anko:anko-appcompat-v7-coroutines:$anko_version"
     // Anko ConstraintLayout
     implementation "org.jetbrains.anko:anko-constraint-layout:$anko_version"
+    // Anko Design support
+    implementation "org.jetbrains.anko:anko-design:$anko_version"
+    // Anko CardView-v7
+    implementation "org.jetbrains.anko:anko-cardview-v7:$anko_version"
     // Gson
     implementation "com.google.code.gson:gson:$gson_version"
     // Mokk
@@ -52,13 +57,17 @@ dependencies {
     implementation 'org.jsoup:jsoup:1.10.3'
     // Robolectric
     testImplementation "org.robolectric:robolectric:3.8"
+    // Constraint layout
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
     implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:cardview-v7:27.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation files('libs/http-request-6.1-SNAPSHOT.jar')
+
+
 }
 
 kotlin {
