--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,8 @@ dependencies {
     testImplementation "org.robolectric:robolectric:3.8"
     // Constraint layout
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    // HttpRequest
+    implementation files('libs/http-request-6.1-SNAPSHOT.jar')
 
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
