--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,18 +37,20 @@ dependencies {
     // (/0_0)/  Kotlin  \(0_0\)
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     // Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.23.4'
-    // Anko
-    implementation "org.jetbrains.anko:anko-sdk25:$anko_version"
-    implementation "org.jetbrains.anko:anko-sdk25-coroutines:$anko_version"
-    implementation "org.jetbrains.anko:anko-appcompat-v7:$anko_version"
-    implementation "org.jetbrains.anko:anko-appcompat-v7-coroutines:$anko_version"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.26.0'
+
+    implementation "org.jetbrains.anko:anko:$anko_version"
     // Anko ConstraintLayout
     implementation "org.jetbrains.anko:anko-constraint-layout:$anko_version"
     // Anko Design support
     implementation "org.jetbrains.anko:anko-design:$anko_version"
     // Anko CardView-v7
     implementation "org.jetbrains.anko:anko-cardview-v7:$anko_version"
+    // Anko RecyclerView-v7
+    implementation "org.jetbrains.anko:anko-recyclerview-v7:$anko_version"
+    implementation "org.jetbrains.anko:anko-recyclerview-v7-coroutines:$anko_version"
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
+
     // Gson
     implementation "com.google.code.gson:gson:$gson_version"
     // Mokk
@@ -71,6 +73,8 @@ dependencies {
 
     implementation "android.arch.lifecycle:extensions:1.1.1"
     annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
+
+
 }
 
 kotlin {
