--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,7 +75,7 @@ dependencies {
     annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
     implementation 'com.android.support:design:27.1.1'
 
-
+    implementation 'com.github.GrenderG:Toasty:1.3.0'
 }
 
 kotlin {
