--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
-    // (/0_0)/  Kotlin  \(0_0\)
+    // (/0_0)/  kotlin  \(0_0\)
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     // Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.26.0'
@@ -76,6 +76,7 @@ dependencies {
     implementation 'com.android.support:design:27.1.1'
 
     implementation 'com.github.GrenderG:Toasty:1.3.0'
+    implementation 'com.makeramen:roundedimageview:2.3.0'
 }
 
 kotlin {
