Remake Gelbooru api from lambda to suspend function.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,9 @@ dependencies {
     releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.6.1'
     testImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.6.1'
     androidTestImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.6.1'
+    implementation 'com.github.kittinunf.fuel:fuel:1.15.0'
+    implementation 'com.github.kittinunf.fuel:fuel-android:1.15.0'
+    implementation 'com.github.kittinunf.fuel:fuel-coroutines:1.15.0'
 }
 
 configurations.all { config ->
