--- a/BooruAPI/build.gradle
+++ b/BooruAPI/build.gradle
@@ -4,6 +4,7 @@ apply plugin: 'kotlin'
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.10"
+    implementation 'junit:junit:4.12'
 }
 
 sourceCompatibility = "7"
