[refactor] Move basic booru types, like Tag, Post, etc to another module - BooruTypes. Also move tests.

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':BooruAPI', ':Network', ':Parser', ':Repository'
+include ':app', ':BooruAPI', ':Network', ':Parser', ':Repository', ':BooruTypes'
