--- a/BooruAPI/build.gradle
+++ b/BooruAPI/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'kotlin'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation project(path: ':BooruTypes')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.10"
     implementation 'junit:junit:4.12'
 }
