--- a/Parser/build.gradle
+++ b/Parser/build.gradle
@@ -8,6 +8,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'org.jsoup:jsoup:1.11.3'
     implementation 'junit:junit:4.12'
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.10"
 }
 
 sourceCompatibility = "7"
