--- a/Repository/build.gradle
+++ b/Repository/build.gradle
@@ -3,6 +3,9 @@ apply plugin: 'kotlin'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation project(path: ':BooruTypes')
+    implementation project(path: ':BooruAPI')
+    testImplementation project(path: ':Network')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.10"
     implementation 'junit:junit:4.12'
 }
