--- a/BooruAPI/build.gradle
+++ b/BooruAPI/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'kotlin'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation project(path: ':BooruTypes')
+    api project(path: ':BooruTypes')
     implementation project(path: ':Parser')
     implementation project(path: ':Network')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.10"
