--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
 
     <dist:module dist:instant="true"/>
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
             android:name=".Booruchan"
             android:allowBackup="true"
