[feature] Move Styles.kt file to the new module and separate

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':BooruAPI', ':Network', ':Parser', ':Repository', ':BooruTypes'
+include ':app', ':BooruAPI', ':Network', ':Parser', ':Repository', ':BooruTypes', ':Style'
