--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation project(path: ':BooruAPI')
     implementation project(path: ':Network')
     implementation project(path: ':Repository')
+    implementation project(path: ':Style')
 
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.core:core-ktx:1.0.1'
