[build] Add ViewModel module to the app as a dependency

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation project(path: ':Network')
     implementation project(path: ':Repository')
     implementation project(path: ':Style')
+    implementation project(path: ':ViewModel')
 
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.core:core-ktx:1.0.1'
