--- a/Controllers/build.gradle
+++ b/Controllers/build.gradle
@@ -7,6 +7,7 @@ apply plugin: 'java-library'
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "io.reactivex.rxjava2:rxjava:2.2.4"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 }
 
