[feature] Return to the ExoPlayer. Fix player releasing bug.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    //for ExoPlayer
+    compileOptions {
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    //for ExoPlayer too
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -50,7 +59,11 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'org.jsoup:jsoup:1.11.3'
-    implementation'com.github.kittinunf.fuel:fuel:1.15.1'
+    implementation 'com.github.kittinunf.fuel:fuel:1.15.1'
+
+    //ExoPlayer
+    //https://github.com/google/ExoPlayer
+    implementation 'com.google.android.exoplayer:exoplayer:2.9.4'
 
     testImplementation 'junit:junit:4.12'
     testImplementation "io.mockk:mockk:1.8.13.kotlin13"
