[feature] Add report activity for displaying errors. On unsuccessful notification click causes ReportActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".screen.report.ReportActivity"/>
         <receiver android:name=".AppBroadcastReceiver"
                   android:enabled="true"
                   android:exported="true"/>
