[refactor] Update notifications

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ android {
     //for ExoPlayer too
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8
+        freeCompilerArgs = ["-XXLanguage:+InlineClasses"]
     }
 }
 
