--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "com.makentoshe.booruchan"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 7
-        versionName "RC 6"
+        versionCode 8
+        versionName "0.1.0-beta"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
