[refactor] Update settings screen using koin

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,8 +68,9 @@ dependencies {
 
     //Koin
     //https://github.com/InsertKoinIO/koin
-    implementation 'org.koin:koin-android:2.0.0-rc-2'
-    implementation 'org.koin:koin-androidx-scope:2.0.0-rc-2'
+    implementation "org.koin:koin-android:$koin_version"
+    implementation "org.koin:koin-androidx-scope:$koin_version"
+    implementation "org.koin:koin-core:$koin_version"
 
     testImplementation 'junit:junit:4.12'
     testImplementation "io.mockk:mockk:1.8.13.kotlin13"
