--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     ext.kotlin_version = '1.3.21'
     ext.anko_version = '0.10.8'
+    ext.koin_version = '2.0.0-rc-2'
     repositories {
         google()
         jcenter()
