--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,7 +94,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.1.1'
     androidTestImplementation 'androidx.test:rules:1.1.1'
     androidTestImplementation 'androidx.test:runner:1.1.1'
-    androidTestImplementation 'com.android.support.test.uiautomator:uiautomator-v18:2.1.3'
 
-
+    androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
 }
