--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,10 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
+        // Realm-java
+        // https://github.com/realm/realm-java
+        classpath "io.realm:realm-gradle-plugin:5.11.0"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
