--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/Sotis"
+            android:theme="@style/Sothis"
             tools:ignore="GoogleAppIndexingWarning">
 
         <activity android:name=".AppActivity">
