--- a/settings/src/main/AndroidManifest.xml
+++ b/settings/src/main/AndroidManifest.xml
@@ -1,2 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.makentoshe.settings"/>
+          package="com.makentoshe.settings">
+    <application
+            android:theme="@style/Sothis">
+        <activity android:name=".TestActivity"/>
+    </application>
+</manifest>
