--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':settings', ':style', ':api', ':startview'
+include ':app', ':settings', ':style', ':api', ':startview', ':booruview'
