--- a/booruview/build.gradle
+++ b/booruview/build.gradle
@@ -27,7 +27,12 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    // Main api to Booru
     implementation project(":api")
+    // Module performs navigation between internal screens
+    implementation project(":navigation")
+    // Module displays post screen
+    implementation project(":boorupostview")
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.2.1'
@@ -39,8 +44,6 @@ dependencies {
     implementation "org.jetbrains.anko:anko-coroutines:$anko_version"
 
     implementation 'androidx.appcompat:appcompat:1.0.2'
-
-    implementation 'ru.terrakok.cicerone:cicerone:4.0.2'
 
     testImplementation 'junit:junit:4.12'
 
