--- a/boorupostview/build.gradle
+++ b/boorupostview/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     implementation "org.jetbrains.anko:anko-appcompat-v7-commons:$anko_version"
     implementation "org.jetbrains.anko:anko-appcompat-v7:$anko_version"
     implementation "org.jetbrains.anko:anko-coroutines:$anko_version"
+    // Anko CardView-v7
+    implementation "org.jetbrains.anko:anko-cardview-v7:$anko_version"
 
     // SlidingUpPanelLayout
     // https://github.com/umano/AndroidSlidingUpPanel
