[refactor] Move BooruFragmentNavigator out of the booruview module

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     implementation project(":startview")
     implementation project(":api")
     implementation project(":booruview")
+    implementation project(":boorupostview")
+    implementation project(":navigation")
 
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.core:core-ktx:1.0.1'
