[build] Add ViewModel architecture components

--- a/boorupostview/build.gradle
+++ b/boorupostview/build.gradle
@@ -65,6 +65,11 @@ dependencies {
     // https://github.com/material-components/material-components-android
     implementation 'com.google.android.material:material:1.1.0-alpha07'
 
+    // ViewModel architecture
+    implementation "androidx.lifecycle:lifecycle-viewmodel:2.0.0"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha01'
+
+
     implementation 'androidx.appcompat:appcompat:1.0.2'
 
     testImplementation 'junit:junit:4.12'
