--- a/startview/build.gradle
+++ b/startview/build.gradle
@@ -40,6 +40,23 @@ dependencies {
     implementation "org.jetbrains.anko:anko-appcompat-v7:$anko_version"
     implementation "org.jetbrains.anko:anko-coroutines:$anko_version"
 
+    // RxJava2
+    // https://github.com/ReactiveX/RxJava
+    implementation "io.reactivex.rxjava2:rxjava:2.2.6"
+
+    // RxAndroid
+    // https://github.com/ReactiveX/RxAndroid
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+
+    // RxBinding
+    // https://github.com/JakeWharton/RxBinding
+    implementation 'com.jakewharton.rxbinding3:rxbinding-core:3.0.0-alpha2'
+    implementation 'com.jakewharton.rxbinding3:rxbinding-appcompat:3.0.0-alpha2'
+
+    // ViewModel architecture
+    implementation "androidx.lifecycle:lifecycle-viewmodel:2.0.0"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha01'
+
     implementation 'androidx.appcompat:appcompat:1.0.2'
 
     testImplementation 'junit:junit:4.12'
