--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation project(":booruview")
     implementation project(":boorupostview")
     implementation project(":navigation")
+    implementation project(":booruimageview")
 
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.core:core-ktx:1.0.1'
