--- a/booruview/build.gradle
+++ b/booruview/build.gradle
@@ -51,6 +51,12 @@ dependencies {
 
     testImplementation 'junit:junit:4.12'
 
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    // Mockk
+    // https://github.com/mockk/mockk
+    androidTestImplementation "io.mockk:mockk:1.8.13.kotlin13"
+    androidTestImplementation "io.mockk:mockk-android:1.8.13.kotlin13"
+
+    androidTestImplementation 'androidx.test:rules:1.1.1'
+    androidTestImplementation 'androidx.test:runner:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 }
