--- a/booruimageview/build.gradle
+++ b/booruimageview/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 28
@@ -39,10 +41,6 @@ dependencies {
     implementation "org.jetbrains.anko:anko-coroutines:$anko_version"
     // Anko CardView-v7
     implementation "org.jetbrains.anko:anko-cardview-v7:$anko_version"
-
-    // SlidingUpPanelLayout
-    // https://github.com/umano/AndroidSlidingUpPanel
-    implementation 'com.sothree.slidinguppanel:library:3.4.0'
 
     // RxJava2
     // https://github.com/ReactiveX/RxJava
