--- a/style/build.gradle
+++ b/style/build.gradle
@@ -48,6 +48,11 @@ dependencies {
     // https://github.com/material-components/material-components-android
     implementation 'com.google.android.material:material:1.1.0-alpha07'
 
+    // SlidingUpPanelLayout
+    // https://github.com/umano/AndroidSlidingUpPanel
+    // make able to use it from another modules
+    api 'com.sothree.slidinguppanel:library:3.4.0'
+
     implementation 'androidx.appcompat:appcompat:1.0.2'
 
     testImplementation 'junit:junit:4.12'
