--- a/boorusamplesview/build.gradle
+++ b/boorusamplesview/build.gradle
@@ -65,6 +65,13 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel:2.0.0"
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha01'
 
+    // Gif drawable
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.16'
+
+    //ExoPlayer
+    //https://github.com/google/ExoPlayer
+    implementation 'com.google.android.exoplayer:exoplayer:2.9.4'
+
     implementation 'androidx.appcompat:appcompat:1.0.2'
 
     testImplementation 'junit:junit:4.12'
