--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation project(":boorupostview")
     implementation project(":navigation")
     implementation project(':boorusamplesview')
+    implementation project(":webmview")
 
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.core:core-ktx:1.0.1'
