--- a/webmview/build.gradle
+++ b/webmview/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 
 android {
@@ -22,17 +23,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    compileOptions {
-        sourceCompatibility 1.8
-        targetCompatibility 1.8
-    }
+
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation project(":api")
-    implementation project(":style")
-    implementation project(":webmview")
 
     // Kotlin and Kotlin-android
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -42,42 +37,20 @@ dependencies {
     // Anko
     // https://github.com/Kotlin/anko
     implementation "org.jetbrains.anko:anko:$anko_version"
-    implementation "org.jetbrains.anko:anko-appcompat-v7-commons:$anko_version"
-    implementation "org.jetbrains.anko:anko-appcompat-v7:$anko_version"
-    implementation "org.jetbrains.anko:anko-coroutines:$anko_version"
-    // Anko CardView-v7
-    implementation "org.jetbrains.anko:anko-cardview-v7:$anko_version"
-
-    // RxJava2
-    // https://github.com/ReactiveX/RxJava
-    implementation "io.reactivex.rxjava2:rxjava:2.2.6"
-
-    // RxAndroid
-    // https://github.com/ReactiveX/RxAndroid
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-
-    // RxBinding
-    // https://github.com/JakeWharton/RxBinding
-    implementation 'com.jakewharton.rxbinding3:rxbinding-core:3.0.0-alpha2'
-    implementation 'com.jakewharton.rxbinding3:rxbinding-appcompat:3.0.0-alpha2'
-
-    // Material components
-    // https://github.com/material-components/material-components-android
-    implementation 'com.google.android.material:material:1.1.0-alpha07'
-
-    // ViewModel architecture
-    implementation "androidx.lifecycle:lifecycle-viewmodel:2.0.0"
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha01'
-
-    // Gif drawable
-    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.16'
 
     //ExoPlayer
     //https://github.com/google/ExoPlayer
     implementation 'com.google.android.exoplayer:exoplayer:2.9.4'
 
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    // ViewModel architecture
+    implementation "androidx.lifecycle:lifecycle-viewmodel:2.0.0"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha01'
 
+    // RxJava2
+    // https://github.com/ReactiveX/RxJava
+    implementation "io.reactivex.rxjava2:rxjava:2.2.6"
+
+    implementation 'androidx.appcompat:appcompat:1.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
