--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':settings', ':style', ':api', ':startview', ':booruview', ':boorupostview', ':navigation', ':boorusamplesview', ':settingsview', ':webmview'
+include ':app', ':settings', ':style', ':api', ':startview', ':booruview', ':boorupostview', ':navigation', ':boorusamplesview', ':settingsview', ':webmview', ':gifview'
