build(gelbooru): Connect 'core' module to the 'gelbooru' module
This allows to use core classes

--- a/booruchan-gelbooru/build.gradle
+++ b/booruchan-gelbooru/build.gradle
@@ -10,5 +10,6 @@ repositories {
 }
 
 dependencies {
+    implementation ":booruchan-core"
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
 }
