--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.72'
 }
 
-group 'org.example'
+group 'com.makentoshe.booruchan'
 version '1.0-SNAPSHOT'
 
 repositories {
