build(core): Update group id for build.gradle

--- a/booruchan-core/build.gradle
+++ b/booruchan-core/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'org.jetbrains.kotlin.jvm'
 }
 
-group 'org.example'
+group 'com.makentoshe.booruchan.core'
 version '1.0-SNAPSHOT'
 
 repositories {
