build(gelbooru): Fix depending on the 'core' module declaration

--- a/booruchan-gelbooru/build.gradle
+++ b/booruchan-gelbooru/build.gradle
@@ -10,6 +10,6 @@ repositories {
 }
 
 dependencies {
-    implementation ":booruchan-core"
+    compile project(':booruchan-core')
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
 }
