build(*): Update settings.gradle

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,5 @@
 rootProject.name = 'Booruchan'
-include("booruchan-core")
-include("booruchan-gelbooru")
+include 'booruchan-core'
+include 'booruchan-gelbooru'
+include 'booruchan-danbooru'
 
