ci(internal): Add core and gelbooru modules build steps
With a russian commentaries in it

--- a/booruchan-gelbooru/build.gradle
+++ b/booruchan-gelbooru/build.gradle
@@ -10,6 +10,7 @@ repositories {
 }
 
 dependencies {
+    println(args.toList())
     compile project(':booruchan-core')
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
 }
