build(android): Add coroutines dependency

--- a/gradle.properties
+++ b/gradle.properties
@@ -29,6 +29,8 @@ version.androidx.appcompat=1.2.0
 version.androidx.constraint=2.0.2
 version.androidx.test.runner=1.3.0
 version.androidx.test.espresso=3.3.0
+version.coroutines.viewmodel=2.2.0
 
 # Application - actual for applications (android, web, ios)
 version.ktor=1.3.1
+version.coroutines=1.3.7
