feat(android): Implement posts paging with coroutines

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,9 +19,10 @@ android.enableJetifier=true
 org.gradle.jvmargs=-Xmx1536m -Djavax.net.ssl.trustStoreType=JKS
 
 # Dependencies versions
-# Android - actual for android modules
+# Android - actual for android application part
 version.cicerone=5.1.1
 version.toothpick=3.1.0
+version.androidx.paging=2.1.2
 version.androidx.core=1.3.0
 version.androidx.material=1.3.0-alpha01
 version.androidx.arch=1.1.1
