--- a/gradle.properties
+++ b/gradle.properties
@@ -18,6 +18,8 @@ android.enableJetifier=true
 # The setting is particularly useful for tweaking memory settings.
 org.gradle.jvmargs=-Xmx1536m -Djavax.net.ssl.trustStoreType=JKS
 
+kapt.incremental.apt=true
+
 # Dependencies versions
 # Android - actual for android application part
 version.cicerone=5.1.1
