build(android): Fix core module

--- a/application/android/core/src/main/AndroidManifest.xml
+++ b/application/android/core/src/main/AndroidManifest.xml
@@ -1,4 +1,1 @@
-<manifest
-        package="com.makentoshe.booruchan.application.android">
-
-</manifest>
+<manifest package="com.makentoshe.booruchan.application.android.core"/>
