feat(android): Add hiding soft keyboard and showing bottom navigation bar on panel collapse and hiding bottom navigation bar on panel expand

--- a/application/android/app/src/main/AndroidManifest.xml
+++ b/application/android/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
 
         <activity
             android:name=".AppActivity"
-            android:windowSoftInputMode="adjustPan">
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
