build: update dependencies

--- a/screen/boorulist/build.gradle
+++ b/screen/boorulist/build.gradle
@@ -5,14 +5,21 @@ plugins {
 
 android {
     namespace 'com.makentoshe.screen.boorulist'
-    compileSdk 33
+    compileSdk project_compile_sdk
 
     defaultConfig {
-        minSdk 24
-        targetSdk 33
+        minSdk project_min_sdk
+        targetSdk project_target_sdk
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
+    }
+
+    buildFeatures {
+        compose true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion compose_version
     }
 
     buildTypes {
@@ -31,11 +38,6 @@ android {
 }
 
 dependencies {
-
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation "androidx.core:core-ktx:$android_core_version"
+    implementation "androidx.appcompat:appcompat:$android_appcompat_version"
 }
