--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,27 @@
 buildscript {
     ext {
-        compose_version = '1.2.0'
-        kotlin_serialization_version = '1.4.1'
+        project_compile_sdk = 33
+        project_target_sdk = 33
+        project_min_sdk = 24
+        project_version_code = 1
+        project_version_name = "1.0"
 
-        compose_version = '1.3.2'
+        compose_version = '1.2.0'
         compose_ui_version = "1.3.0-alpha01"
+        compose_ui_tooling_version = "1.2.1"
         compose_runtime_version = "1.2.1"
         compose_permission_version = "0.25.0"
         compose_viewmodel_version = "2.5.0"
         compose_hilt_version = '1.0.0'
         compose_swiperefresh_version = '0.27.0'
+        compose_material3_version = '1.0.0-alpha11'
 
         android_core_version = '1.8.0'
+        android_appcompat_version = '1.4.1'
+        android_lifecycle_version = '2.3.1'
         android_room_version = "2.4.3"
         android_security_crypto = "1.1.0-alpha03"
+        android_activity_compose_version = '1.3.1'
 
         android_timber_version = "5.0.1"
 
