--- a/screen/build.gradle
+++ b/screen/build.gradle
@@ -5,11 +5,11 @@ plugins {
 
 android {
     namespace 'com.makentoshe.screen'
-    compileSdk 33
+    compileSdk project_compile_sdk
 
     defaultConfig {
-        minSdk 24
-        targetSdk 33
+        minSdk project_min_sdk
+        targetSdk project_target_sdk
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
