--- a/screen/splash/build.gradle
+++ b/screen/splash/build.gradle
@@ -38,7 +38,12 @@ android {
 }
 
 dependencies {
+    implementation project(":library:uikit")
 
     implementation "androidx.core:core-ktx:$android_core_version"
-    implementation "androidx.appcompat:appcompat:$android_appcompat_version"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$android_lifecycle_version"
+    implementation "androidx.activity:activity-compose:$android_activity_compose_version"
+    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    implementation "androidx.compose.material3:material3:$compose_material3_version"
 }
