feature: implement navigation

--- a/screen/splash/build.gradle
+++ b/screen/splash/build.gradle
@@ -39,6 +39,7 @@ android {
 
 dependencies {
     implementation project(":library:uikit")
+    implementation project(":library:navigation")
 
     implementation "androidx.core:core-ktx:$android_core_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$android_lifecycle_version"
