--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,9 @@ android {
 dependencies {
 
     implementation project(":library:uikit")
+    implementation project(":library:navigation")
 
+    implementation project(":screen")
     implementation project(":screen:splash")
 
     implementation "androidx.core:core-ktx:$android_core_version"
@@ -59,6 +61,7 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation "androidx.compose.material3:material3:$compose_material3_version"
+    implementation "androidx.navigation:navigation-compose:$compose_navigation_version"
 
     testImplementation "junit:junit:4.13.2"
     androidTestImplementation "androidx.test.ext:junit:1.1.5"
