--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
         compose_runtime_version = "1.2.1"
         compose_permission_version = "0.25.0"
         compose_viewmodel_version = "2.5.0"
+        compose_navigation_version = "2.5.3"
         compose_hilt_version = '1.0.0'
         compose_swiperefresh_version = '0.27.0'
         compose_material3_version = '1.0.0-alpha11'
