--- a/screen/boorulist/build.gradle
+++ b/screen/boorulist/build.gradle
@@ -38,6 +38,20 @@ android {
 }
 
 dependencies {
+    implementation project(":library:uikit")
+    implementation project(":library:navigation")
+
     implementation "androidx.core:core-ktx:$android_core_version"
-    implementation "androidx.appcompat:appcompat:$android_appcompat_version"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$android_lifecycle_version"
+    implementation "androidx.activity:activity-compose:$android_activity_compose_version"
+    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    implementation "androidx.compose.material3:material3:$compose_material3_version"
+}
+
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+    kotlinOptions {
+        freeCompilerArgs += "-Xopt-in=com.google.accompanist.permissions.ExperimentalPermissionsApi"
+        freeCompilerArgs += "-Xopt-in=androidx.compose.material3.ExperimentalMaterial3Api"
+    }
 }
